# ClientServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  programm.c
.github/workflows/: cmake.yml  doxygen.yml
ITAC/Common/: CMakeLists.txt
ITAC/Common/inc/: FS.h  Logger.h  own_literals.h  string_funcs.h
ITAC/Common/src/: FS.cpp  Logger.cpp  string_funcs.cpp
ITAC/Common/tests/: CMakeLists.txt  Logger_test.cpp  string_funcs_test.cpp
ITAC/Server/: CMakeLists.txt
ITAC/Server/Tests/: CMakeLists.txt  Server_test.cpp
ITAC/Server/inc/: Server.h  Socket.h
ITAC/Server/src/: Server.cpp  Socket.cpp  main.cpp
MobileClient/: ITAC.sln
MobileClient/ITAC/ITAC/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  ITAC.csproj
MobileClient/ITAC/ITAC.Android/: ITAC.Android.csproj  MainActivity.cs
MobileClient/ITAC/ITAC.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
MobileClient/ITAC/ITAC.Android/Resources/: Resource.designer.cs
MobileClient/ITAC/ITAC.iOS/: AppDelegate.cs  ITAC.iOS.csproj  Info.plist  Main.cs
MobileClient/ITAC/ITAC.iOS/Properties/: AssemblyInfo.cs
MobileClient/ITAC/ITAC/Services/: IDataStore.cs
MobileClient/ITAC/ITAC/Views/: AboutPage.xaml  AboutPage.xaml.cs  ItacCommunicate.xaml  ItacCommunicate.xaml.cs  ItemDetailPage.xaml  NewItemPage.xaml
clientWin/ITAC_WinClient/: App.xaml.cs  ITAC_WinClient.csproj  ITAC_WinClient.sln  MainWindow.xaml  MainWindow.xaml.cs
clientWin/ITAC_WinClient/Properties/: Settings.Designer.cs
clients/ITAC_WinClient/: App.xaml  ITAC_WinClient.csproj  MainWindow.xaml  MainWindow.xaml.cs  Option.xaml  Option.xaml.cs  Option.xaml.cs~RF141aa9e.TMP  WinWork.xaml  WinWork.xaml.cs
clients/ITAC_WinClient/Models/: configurationStruct.cs
clients/ITAC_WinClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs
clients/ITACmessendgerMVVM(wpf)/: App.xaml  App.xaml.cs  ITACmessendgerMVVM(wpf).csproj  ITACmessendgerMVVM(wpf).sln
clients/ITACmessendgerMVVM(wpf)/Models/: authorizateForm.cs  client.cs  clientStatic.cs  locator.cs  locatorWindows.cs  messegeJson.cs  messengerCommands.cs
clients/ITACmessendgerMVVM(wpf)/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
clients/ITACmessendgerMVVM(wpf)/Resources/styles/: ButtonModernAuth.xaml  darkStyle.xaml
clients/ITACmessendgerMVVM(wpf)/ViewModels/: AuthorizationViewModel.cs  AuthorizationWindowViewModel.cs  MainWindowViewModel.cs  MessendgerWindowViewModel.cs
clients/ITACmessendgerMVVM(wpf)/Views/: Authorization.xaml  Authorization.xaml.cs  AuthorizationWindow.xaml  AuthorizationWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MessendgerWindow.xaml  MessendgerWindow.xaml.cs
clients/tempori/TestServetSharp/: Program.cs  TestServetSharp.sln
